--- a/login.html
+++ b/login.html
@@ -1,4 +1,4 @@
 <div class="login">
     <h1>Login Page</h1>
-    <input type="text" placeholder="Username">
+    <input type="text" placeholder="Username" class="anjan-style">
 </div>
